# sctrading

./: .gitignore  README.md  pyproject.toml
notebooks/: backtester.ipynb  rl_backtests.ipynb  test.ipynb
old/: download_data.py  download_single_ticker.py  find_missing_ticker.py  full_download.py  full_download2.py  full_download3.py  full_download4.py  initial_download.py  inspect_download.py  inspect_downloads.ipynb
scripts/: cache_data.py  migrate_dtypes.py  schema_migrator.py
src/sctrading/: backtester.py  data_downloader.py  data_manager.py  feature_precalculator.py  file_io.py  model_trainer.py  pretraining_dataset_builder.py  universe_builder.py
tests/: test.py
